# lyrion-remote

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/lf/: beet-lfrc  lms-lfrc  pistol.conf  previewer-lfrc
configs/mailcap/: mailcap-config
src/lyrionRemote/: __about__.py  __init__.py  lms.py  lmscommander.py  processgpio.py
