[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lyrionRemote"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ['lyrion', 'lms', 'gpio', 'remote']
authors = [
  { name = "rawdlite", email = "rawdlite@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  'lms',
  'gpiozero',
  'pigpio',
  'pigpio-encoder',
  'luma.core',
  'luma.oled'
]

[project.urls]
Documentation = "https://github.com/rawdlite/lyrion-remote#readme"
Issues = "https://github.com/rawdlite/lyrion-remote/issues"
Source = "https://github.com/rawdlite/lyrion-remote"

[tool.hatch.version]
path = "src/lyrionRemote/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/lyrion_remote tests}"

[tool.coverage.run]
source_pkgs = ["lyrion_remote", "tests"]
branch = true
parallel = true
omit = [
  "src/lyrion_remote/__about__.py",
]

[tool.coverage.paths]
lyrion_remote = ["src/lyrion_remote", "*/lyrion-remote/src/lyrion_remote"]
tests = ["tests", "*/lyrion-remote/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
